--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,13 @@
     ]
   },
   "devDependencies": {
-    "@types/reach__router": "^1.3.9"
+    "@types/enzyme": "^3.10.9",
+    "@types/reach__router": "^1.3.9",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2"
+  },
+  "jest": {
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   }
 }
